# fractal-viewer

./: CMakeLists.txt  build.sh
asci/: main.cpp
include/frac/: app.hpp  gl_helpers.hpp  mouse.hpp  shader.hpp
include/glad/: glad.h
src/: CMakeLists.txt  app.cpp  app.hpp  gl_helpers.cpp  gl_helpers.hpp  glad.c  julia.frag  main.cpp  mandel.frag  mandel.vert  mouse.cpp  shader.cpp  shader.hpp
